conformance/tests/backendtlspolicy-normative.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: gateway-backendtlspolicy
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: "{GATEWAY_CLASS_NAME}"
  listeners:
  - name: https
    port: 443
    protocol: HTTPS
    hostname: "*.example.com"
    allowedRoutes:
      namespaces:
        from: Same
      kinds:
      - kind: HTTPRoute
---
apiVersion: gateway.networking.k8s.io/v1alpha3
kind: BackendTLSPolicy
metadata:
  name: normative-test-backendtlspolicy
  namespace: gateway-conformance-infra
spec:
  targetRefs:
    - group: ""
      kind: Service
      name: "backendtlspolicy-test"
  validation:
    caCertificateRefs:
      group: ""
      kind: Secret
      name: "backend-tls-checks-certificate"
    hostname: "abc.example.com"
